force-app/main/default/objects/Opportunity_Document__c/Opportunity_Document__c.object-meta.xml
<CustomObject>
    <label>Opportunity Document</label>
    <nameField>
        <displayFormat>DOC-{00000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>