force-app/main/default/objects/Opportunity_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale Deed</fullName>
            </value>
            <value>
                <fullName>No Due Certificate</fullName>
            </value>
            <value>
                <fullName>Floor Plan</fullName>
            </value>
            <value>
                <fullName>Occupancy Certificate</fullName>
            </value>
            <value>
                <fullName>Property Tax Receipt</fullName>
            </value>
            <value>
                <fullName>Electricity Bill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>