force-app/main/default/objects/Opportunity_Document__c/fields/Uploaded_On__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_On__c</fullName>
    <label>Uploaded On</label>
    <type>DateTime</type>
</CustomField>